# space-project

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  BEGINNER_GUIDE.md  FEATURE_A_CONTINUOUS_AGGREGATES.md  FEATURE_C_DLQ_BUFFERING.md  FEATURE_E_QUERY_ANALYSIS_POSITIONS.md  Makefile  README.md  claudeplan.md  docker-compose.yml  myplanning.md  package-lock.json  problem1.md
.beads/: issues.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
go-service/: Dockerfile  go.mod  go.sum  main.go
go-service/config/: config.go  config_test.go
go-service/db/: aggregates_test.go  batch.go  batch_test.go  circuit_breaker.go  circuit_breaker_test.go  connection.go  fault_tolerance_test.go  health_monitor.go  health_monitor_test.go  init.sql  integration_test.go  karyawan.sql  pg_stat_statements_test.go  schema_test.go  test_helpers.go  wal.go  wal_test.go
go-service/handlers/: telemetry.go  telemetry_test.go
go-service/models/: telemetry.go  telemetry_test.go
go-service/test/: setup.go
grafana/dashboards/: database-health.json  downsampling-comparison.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: timescaledb.yml
python-simulator/: Dockerfile  config.py  pyproject.toml  pytest.ini  requirements.txt  satellite_sim.py
python-simulator/generators/: position_calc.py  telemetry_gen.py  tle_manager.py
python-simulator/tests/: conftest.py  test_config.py  test_position_calc.py  test_satellite_sim.py  test_telemetry_gen.py  test_tle_manager.py
scripts/: chaos_monkey.py
