[project]
name = "orbitstream-simulator"
version = "1.0.0"
description = "Satellite telemetry simulator for OrbitStream"
requires-python = ">=3.11"

[tool.ruff]
# Same as Black's default line length
line-length = 88
target-version = "py310"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, variables, etc.)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize Python code)
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by black)
    "UP017", # datetime.UTC not available in Python 3.10
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py
"__init__.py" = ["F401"]
# Allow non-lowercase function names in tests (e.g., test_dBm_range)
"tests/*.py" = ["N802"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.eggs
  | \.egg-info
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
